--- a/poll/templates/poll/index.html
+++ b/poll/templates/poll/index.html
@@ -15,11 +15,11 @@
              <p class="text-center font-mono font-bold text-red-600">You can only vote once !</p>
              {% endif %}
             <div class="m-3 mb-12 poll text-center flex justify-center">
-                <button type="submit" name="action" value="decrement_btn" class="vote-button focus:outline-none text-white bg-red-700 hover:bg-red-500 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 mx-2 dark:focus:ring-red-900">L</button>
+                <button type="submit" name="action" value="decrement_btn" class="vote-button focus:outline-none text-white bg-red-700 hover:bg-red-500 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 mx-2 dark:focus:ring-red-900">NO</button>
                 <div class=" h-10 w-2/4 dark:bg-gray-700">
                     <div id="poll-result" class="h-10 bg-slate-100 text-s font-medium text-slate-950 text-center p-3 leading-none"> <div class="score">{{score}} + %</div></div>
                 </div>
-                <button type="submit" name="action" value="increment_btn" class="vote-button :outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 mx-2 dark:focus:ring-yellow-900">W</button>
+                <button type="submit" name="action" value="increment_btn" class="vote-button :outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 mx-2 dark:focus:ring-yellow-900">YES</button>
                 </div>
         </form>
 
